--- a/styles/get_involved.css
+++ b/styles/get_involved.css
@@ -417,14 +417,18 @@ p.button {
   padding: 8px 32px;
   margin-top: 0;
   margin-bottom: 16px;
-  transition-property: background-color;
+  border-bottom: 2px solid #fff;
+  border-right: 2px solid #fff;
+  transition-property: background-color scale;
   transition-duration: 0.5s;
+  scale: 1;
 }
 p.button:hover {
   background-color: #a2006780;
+  scale: 1.1;
 }
 .newsletter-wrapper {
-  background-image: url(../images/newsletter.jpg);
+  background-image: url(../images/newsletter_mobile.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   height: 300px;
@@ -445,7 +449,7 @@ section.newsletter {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: flex-end;
+  justify-content: center;
   /* background-color: green; */
 }
 .newsletter p {
@@ -456,7 +460,6 @@ section.newsletter {
   text-transform: uppercase;
   text-align: left;
   min-width: 328px;
-  max-width: 400px;
   padding-top: 16px;
   margin: 0;
 }
@@ -662,6 +665,13 @@ h6 {
   section.newsletter {
     width: 50%;
   }
+  .newsletter-wrapper {
+    background-image: url(../images/newsletter.jpg);
+    height: 600px;
+  }
+  .blur {
+    top: 450px;
+  }
 
   /* Footer
 --------------------*/
@@ -848,20 +858,19 @@ border-right: 2px solid transparent; */
   }
   section.newsletter {
     width: 100%;
-    flex-direction: row;
-    align-items: center;
     /* background-color: green; */
   }
+  .blur {
+    height: 200px;
+    top: 400px;
+  }
   .newsletter p {
-    min-width: 33%;
     font-size: 1.25rem;
     text-transform: uppercase;
-    margin-bottom: 16px;
-    margin-left: 10%;
+    margin-top: 64px;
   }
   form.newsletter {
     height: 60px;
-    margin-left: 10%;
   }
   #newsletter {
     font-size: 1.125rem;
@@ -891,6 +900,15 @@ border-right: 2px solid transparent; */
   }
   .connect li {
     padding: 8px;
+  }
+}
+
+@media only screen and (min-width: 1600px) {
+  h1.large-screen {
+    margin-bottom: 32px;
+  }
+  section.main-content {
+    gap: 32px;
   }
 }
 @media only screen and (min-width: 1800px) {
