--- a/styles/about_us.css
+++ b/styles/about_us.css
@@ -51,8 +51,8 @@ a {
   display: flex;
   flex-direction: column;
   background-color: #fff;
-  border-left: 2px solid var(--dark-purple);
-  border-right: 2px solid var(--dark-purple);
+  /* border-left: 2px solid var(--dark-purple);
+  border-right: 2px solid var(--dark-purple); */
   border-bottom: 8px solid var(--dark-purple);
   border-radius: 70px 0 70px 0;
 }
@@ -102,8 +102,8 @@ form {
   display: flex;
   flex-direction: column;
   background-color: #fff;
-  border-left: 2px solid var(--dark-purple);
-  border-right: 2px solid var(--dark-purple);
+  /* border-left: 2px solid var(--dark-purple);
+  border-right: 2px solid var(--dark-purple); */
   border-bottom: 8px solid var(--dark-purple);
   border-radius: 70px 0 70px 0;
 }
@@ -180,8 +180,8 @@ button.ticket:hover {
   display: flex;
   flex-direction: column;
   background-color: #fff;
-  border-left: 2px solid var(--dark-purple);
-  border-right: 2px solid var(--dark-purple);
+  /* border-left: 2px solid var(--dark-purple);
+  border-right: 2px solid var(--dark-purple); */
   border-bottom: 8px solid var(--dark-purple);
   border-radius: 70px 0 70px 0;
 }
@@ -438,6 +438,14 @@ p.button {
   padding: 8px 32px;
   margin-top: 0;
   margin-bottom: 16px;
+  border-bottom: 2px solid #fff;
+  border-right: 2px solid #fff;
+  transition-property: scale;
+  transition-duration: 0.5s;
+  scale: 1;
+}
+p.button:hover {
+  scale: 1.1;
 }
 section.tourguides {
   width: 100%;
@@ -564,12 +572,6 @@ form.newsletter {
   color: #fff;
   flex: 1;
   cursor: pointer;
-  transition-property: opacity;
-  transition-duration: 0.5s;
-  opacity: 1;
-}
-#sign-up:hover {
-  opacity: 0.65;
 }
 /* footer 
 --------------------*/
@@ -918,8 +920,8 @@ border-right: 2px solid transparent; */
     color: #000;
     position: absolute;
     left: 0;
-    border-left: 2px solid var(--dark-purple);
-    border-right: 2px solid var(--dark-purple);
+    /* border-left: 2px solid var(--dark-purple);
+    border-right: 2px solid var(--dark-purple); */
     border-bottom: 8px solid var(--dark-purple);
     border-radius: 0 0 70px 0;
     visibility: hidden;
@@ -972,6 +974,10 @@ border-right: 2px solid transparent; */
     align-items: baseline;
     justify-content: center;
     gap: 64px;
+    padding-top: 12px;
+  }
+  .get-in-touch p {
+    font-size: 1.5rem;
   }
   h4 {
     width: 90%;
@@ -1025,8 +1031,14 @@ border-right: 2px solid transparent; */
   }
   #sign-up {
     font-family: var(--sofia);
-    font-size: 1.25rem;
+    font-size: 1.5rem;
     height: 60px;
+    transition-property: font-size background-color;
+    transition-duration: 0.5s;
+  }
+  #sign-up:hover {
+    font-size: 1.65rem;
+    background-color: #210759d9;
   }
   /* Footer
 --------------------*/
