--- a/styles/contact.css
+++ b/styles/contact.css
@@ -51,8 +51,8 @@ a {
   display: flex;
   flex-direction: column;
   background-color: #fff;
-  border-left: 2px solid var(--dark-purple);
-  border-right: 2px solid var(--dark-purple);
+  /* border-left: 2px solid var(--dark-purple);
+  border-right: 2px solid var(--dark-purple); */
   border-bottom: 8px solid var(--dark-purple);
   border-radius: 70px 0 70px 0;
 }
@@ -102,8 +102,8 @@ form {
   display: flex;
   flex-direction: column;
   background-color: #fff;
-  border-left: 2px solid var(--dark-purple);
-  border-right: 2px solid var(--dark-purple);
+  /* border-left: 2px solid var(--dark-purple);
+  border-right: 2px solid var(--dark-purple); */
   border-bottom: 8px solid var(--dark-purple);
   border-radius: 70px 0 70px 0;
 }
@@ -180,8 +180,8 @@ button.ticket:hover {
   display: flex;
   flex-direction: column;
   background-color: #fff;
-  border-left: 2px solid var(--dark-purple);
-  border-right: 2px solid var(--dark-purple);
+  /* border-left: 2px solid var(--dark-purple);
+  border-right: 2px solid var(--dark-purple); */
   border-bottom: 8px solid var(--dark-purple);
   border-radius: 70px 0 70px 0;
 }
@@ -516,12 +516,6 @@ form.newsletter {
   color: #fff;
   flex: 1;
   cursor: pointer;
-  transition-property: opacity;
-  transition-duration: 0.5s;
-  opacity: 1;
-}
-#sign-up:hover {
-  opacity: 0.65;
 }
 /* footer 
 --------------------*/
@@ -826,8 +820,8 @@ border-right: 2px solid transparent; */
     color: #000;
     position: absolute;
     left: 0;
-    border-left: 2px solid var(--dark-purple);
-    border-right: 2px solid var(--dark-purple);
+    /* border-left: 2px solid var(--dark-purple);
+    border-right: 2px solid var(--dark-purple); */
     border-bottom: 8px solid var(--dark-purple);
     border-radius: 0 0 70px 0;
     visibility: hidden;
@@ -910,8 +904,14 @@ border-right: 2px solid transparent; */
   }
   #sign-up {
     font-family: var(--sofia);
-    font-size: 1.25rem;
+    font-size: 1.5rem;
     height: 60px;
+    transition-property: font-size background-color;
+    transition-duration: 0.5s;
+  }
+  #sign-up:hover {
+    font-size: 1.65rem;
+    background-color: #210759d9;
   }
   /* Footer
 --------------------*/
