--- a/styles/contact.css
+++ b/styles/contact.css
@@ -415,7 +415,6 @@ section > p {
 }
 #text {
   font-family: var(--neue-haas);
-  color: #00000040;
   padding: 8px 12px;
 }
 button {
@@ -614,6 +613,7 @@ h6 {
   .ticket-dropdown,
   .profile-dropdown {
     width: 400px;
+    top: 145px;
   }
   /* Main
 --------------------*/
