--- a/styles/exhibitions.css
+++ b/styles/exhibitions.css
@@ -724,6 +724,7 @@ h6 {
   .ticket-dropdown,
   .profile-dropdown {
     width: 400px;
+    top: 145px;
   }
 
   /* Main
@@ -829,6 +830,7 @@ h6 {
     top: 113.5px;
     margin-right: 236px;
     right: 5%;
+    left: auto;
   }
   .ticket-dropdown {
     width: 400px;
