--- a/styles/home.css
+++ b/styles/home.css
@@ -646,7 +646,7 @@ h4 {
   background-color: var(--dark-blue);
   color: var(--white);
   display: block;
-  margin: 32px 5% 32px 0;
+  margin: 32px 5% 0 0;
   padding: 16px 0 16px 32px;
   /* border-top: 2px solid #000;
   border-right: 4px solid #000;
@@ -822,6 +822,7 @@ section.clubs {
   margin: 0 auto;
 }
 div.image-wrapper {
+  margin-top: 32px;
   display: flex;
   flex-direction: column;
 }
@@ -865,6 +866,7 @@ figcaption.clubs {
   border-bottom: 4px solid var(--dark-purple); */
 }
 .clubs p {
+  font-size: 1.125rem;
   margin: 0 0 0 16px;
   background-color: var(--light-purple);
   color: #fff;
@@ -874,11 +876,11 @@ figcaption.clubs {
 h6 {
   font-size: 1rem;
 }
-.image-wrapper {
+/* .image-wrapper {
   display: flex;
   justify-content: space-between;
   /* background-color: limegreen; */
-}
+
 .newsletter-wrapper {
   background-image: url(../images/newsletter_mobile.jpg);
   background-size: cover;
@@ -1042,6 +1044,7 @@ h6 {
   .ticket-dropdown,
   .profile-dropdown {
     width: 400px;
+    top: 145px;
   }
   /* Main
 --------------------*/
@@ -1178,6 +1181,7 @@ h6 {
     border-radius: 50px 50px 50px 0;
     margin-top: 70px;
     bottom: 0;
+    scale: 0.8;
   }
   #about {
     padding-bottom: 32px;
@@ -1202,6 +1206,9 @@ h6 {
     font-size: 3rem;
   }
   .color-box figcaption {
+    font-size: 1.25rem;
+  }
+  .clubs p {
     font-size: 1.25rem;
   }
   section.newsletter {
@@ -1258,6 +1265,8 @@ h6 {
   }
   .bubble {
     margin-top: 100px;
+    scale: 1;
+    left: 20px;
   }
   .clock {
     font-size: 1.25rem;
@@ -1498,6 +1507,7 @@ border-right: 2px solid transparent; */
   }
   h2 {
     font-size: 2.25rem;
+    font-weight: 500;
   }
   .bubble {
     margin-top: 150px;
